--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -43,17 +43,36 @@ body {
 
 .main_flexbox__item2 {
   width: 55vw;
+  max-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
-.main_flexbox__form {
+.form_container {
   width: 45vw;
   height: 100vh;
   background: #0096f0;
 }
 
-.main_flexbox__comment_img {
-  width: 100%;
+.comment_box__logo {
+  width: 50%;
   height: auto;
-  padding: 5rem;
-  align-self: center;
+  max-height: 70vh;
+  margin: 0 25%;
+}
+
+.comment_box__h1 {
+  text-align: center;
+  font-size: 3.2vw;
+  font-weight: 400;
+  color: #232330;
+  line-height: 3.2vw;
+}
+
+.comment_box__h2 {
+  text-align: center;
+  font-size: 8vw;
+  font-weight: 900;
+  color: #232330;
+  line-height: 6.5vw;
 }
