--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -57,6 +57,10 @@
   z-index: 1;
 }
 
+.form__error_p {
+  display: block;
+}
+
 .form_text_area_error {
   top: 10.6rem;
 }
@@ -88,7 +92,7 @@ textarea {
 .form__submit_button {
   display: block;
   text-align: center;
-  margin: 2rem auto;
+  margin: 3rem auto;
   height: 3rem;
   width: 100%;
   font-size: 1.2rem;
