--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,10 +7,8 @@
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   overflow: visible;
-  /* outline: solid 1px red; */
+  outline: solid 1px red;
 }
-
-/* ---------------------------- */
 
 body {
   position: relative;
