992px media query update

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,7 +7,7 @@
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   overflow: hidden;
-  /* outline: solid 1px red; */
+  /* border: 1px solid red; */
 }
 
 body {
@@ -74,6 +74,19 @@ body {
   }
 }
 
+.comment_box__logo_flexbox {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width: 992px) {
+  .comment_box__logo_flexbox {
+    flex-direction: row;
+  }
+}
+
 .comment_box__logo {
   width: 50%;
   height: auto;
@@ -83,10 +96,22 @@ body {
 @media only screen and (max-width: 992px) {
   .comment_box__logo {
     display: none;
-    width: 10%;
-    height: auto;
-    margin: 0.25rem 45%;
   }
+}
+
+.comment_box__logo_small {
+  display: none;
+}
+@media only screen and (max-width: 992px) {
+  .comment_box__logo_small {
+    display: block;
+    width: 5rem;
+    margin: 0.4rem;
+  }
+}
+
+.comment_box__logo_text {
+  margin: 0.25rem;
 }
 
 .comment_box__h1 {
@@ -98,9 +123,8 @@ body {
 }
 @media only screen and (max-width: 992px) {
   .comment_box__h1 {
-    font-size: 2.5vw;
-    line-height: 2.5vw;
-    padding: 0.5rem 0 0 0;
+    font-size: 1.3rem;
+    line-height: 1.3rem;
   }
 }
 
@@ -113,7 +137,7 @@ body {
 }
 @media only screen and (max-width: 992px) {
   .comment_box__h2 {
-    font-size: 6vw;
-    line-height: 5.8vw;
+    font-size: 3.2rem;
+    line-height: 2.8rem;
   }
 }
