--- a/stylesheets/comment.css
+++ b/stylesheets/comment.css
@@ -1,11 +1,22 @@
 .comments__container {
   margin: 1rem;
 }
+@media only screen and (max-width: 451px) {
+  .comments__container {
+    width: 93vw;
+    margin: 0rem auto 0.5rem auto;
+  }
+}
 
 .comment__header {
   background: #0096f0;
   color: white;
   padding: 0.5rem;
+}
+@media only screen and (max-width: 451px) {
+  .comment__header {
+    padding: 0.25rem 0.5rem;
+  }
 }
 
 .comment__name {
@@ -20,4 +31,9 @@
 
 .comment__text {
   padding: 0.5rem;
+}
+@media only screen and (max-width: 451px) {
+  .comment__text {
+    padding: 0.5rem 0.5rem;
+  }
 }
