--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -6,6 +6,7 @@
   align-items: center;
   width: 45vw;
   height: 100vh;
+  overflow-y: auto;
 }
 @media only screen and (max-width: 992px) {
   .form_flexbox {
@@ -19,10 +20,22 @@
     height: 70vh;
   }
 }
+@media only screen and (max-width: 992px) and (max-height: 900px) {
+  .form_flexbox {
+    justify-content: start;
+    padding: 1rem;
+  }
+}
+@media only screen and (max-height: 600px) {
+  .form_flexbox {
+    justify-content: start;
+    padding: 1rem;
+  }
+}
 
 .form_flexbox__item {
   width: 70%;
-  min-height: 60%;
+  min-height: 30rem;
   border-radius: 1rem;
   padding: clamp(0.25rem, 2vw, 2rem);
   background: rgb(255, 255, 255, 1);
@@ -31,6 +44,7 @@
 @media only screen and (max-width: 451px) {
   .form_flexbox__item {
     width: 90%;
+    min-height: 20rem;
   }
 }
 
@@ -52,7 +66,7 @@
   margin: 0rem auto;
   color: #0096f0;
 }
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 992px), screen and (max-height: 700px) {
   .form__h2 {
     font-size: 1.2rem;
   }
@@ -100,7 +114,7 @@
 .form__error_p {
   display: block;
 }
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 992px), screen and (max-height: 700px) {
   .form__error_p {
     display: none;
   }
@@ -120,7 +134,7 @@
   font-size: 1.2rem;
   background: #e5e9ed;
 }
-@media only screen and (max-width: 451px) {
+@media only screen and (max-width: 451px), screen and (max-height: 700px) {
   .form_input__text {
     height: 1.5rem;
   }
@@ -143,7 +157,7 @@ textarea {
     height: 5rem;
   }
 }
-@media only screen and (max-width: 451px) {
+@media only screen and (max-width: 451px), screen and (max-height: 700px) {
   .form_input_comment {
     height: 3rem;
   }
@@ -164,11 +178,12 @@ textarea {
 @media only screen and (max-width: 992px) {
   .form__submit_button {
     margin: 1rem auto;
+    width: 6rem;
   }
 }
-@media only screen and (max-width: 451px) {
+@media only screen and (max-width: 451px), screen and (max-height: 700px) {
   .form__submit_button {
-    height: 1.7rem;
+    height: 2rem;
     width: 6rem;
   }
 }
