--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -20,7 +20,7 @@
     height: 70vh;
   }
 }
-@media only screen and (max-width: 992px) and (max-height: 900px) {
+@media only screen and (max-width: 992px) and (max-height: 700px) {
   .form_flexbox {
     justify-content: start;
     padding: 1rem;
@@ -41,16 +41,17 @@
   padding: clamp(0.25rem, 2vw, 2rem);
   background: rgb(255, 255, 255, 1);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 3px solid #7fff00;
+}
+@media only screen and (max-height: 700px) {
+  .form_flexbox__item {
+    min-height: 30rem;
+  }
 }
 @media only screen and (max-width: 451px) {
   .form_flexbox__item {
     width: 90%;
     min-height: 20rem;
-  }
-}
-@media only screen and (max-height: 700px) {
-  .form_flexbox__item {
-    min-height: 24rem;
   }
 }
 
@@ -81,8 +82,6 @@
 .form_input__container {
   position: relative;
   margin: 1.5rem auto;
-  overflow-x: unset;
-  overflow-y: unset;
 }
 @media only screen and (max-width: 992px) {
   .form_input__container {
@@ -97,8 +96,6 @@
   height: 1.5rem;
   padding: 0.2rem 0.1rem;
   font-weight: 700;
-  overflow-x: unset;
-  overflow-y: unset;
 }
 @media only screen and (max-width: 992px) {
   .form_input__label {
@@ -142,7 +139,7 @@
 }
 @media only screen and (max-width: 451px), screen and (max-height: 700px) {
   .form_input__text {
-    height: 1.5rem;
+    height: 1.8rem;
   }
 }
 
@@ -190,6 +187,7 @@ textarea {
 }
 @media only screen and (max-width: 451px), screen and (max-height: 700px) {
   .form__submit_button {
+    margin: 1rem auto;
     height: 2rem;
     width: 6rem;
   }
