--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -20,13 +20,13 @@
     height: 70vh;
   }
 }
-@media only screen and (max-width: 992px) and (max-height: 700px) {
+@media only screen and (max-width: 992px) and (max-height: 500px) {
   .form_flexbox {
     justify-content: start;
     padding: 1rem;
   }
 }
-@media only screen and (max-height: 600px) {
+@media only screen and (max-height: 500px) {
   .form_flexbox {
     justify-content: start;
     padding: 1rem;
@@ -35,28 +35,21 @@
 
 .form_flexbox__item {
   width: 70%;
-  min-height: 30rem;
   height: auto;
   border-radius: 1rem;
   padding: clamp(0.25rem, 2vw, 2rem);
   background: rgb(255, 255, 255, 1);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-@media only screen and (max-height: 700px) {
-  .form_flexbox__item {
-    min-height: 30rem;
-  }
-}
 @media only screen and (max-width: 451px) {
   .form_flexbox__item {
     width: 90%;
-    min-height: 20rem;
   }
 }
 
 .form_comment_img {
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   margin: 0 auto;
 }
 @media only screen and (max-width: 451px) {
@@ -67,12 +60,12 @@
 
 .form__h2 {
   font-weight: 700;
-  font-size: clamp(1.2rem, 5vw, 2.2rem);
+  font-size: clamp(1.2rem, 4vw, 2.2rem);
   text-align: center;
   margin: 0rem auto;
   color: #0096f0;
 }
-@media only screen and (max-width: 992px), screen and (max-height: 700px) {
+@media only screen and (max-width: 992px), screen and (max-height: 720px) {
   .form__h2 {
     font-size: 1.2rem;
   }
@@ -116,7 +109,7 @@
 .form__error_p {
   display: block;
 }
-@media only screen and (max-width: 992px), screen and (max-height: 700px) {
+@media only screen and (max-width: 992px), screen and (max-height: 720px) {
   .form__error_p {
     display: none;
   }
@@ -136,7 +129,12 @@
   font-size: 1.2rem;
   background: #e5e9ed;
 }
-@media only screen and (max-width: 451px), screen and (max-height: 700px) {
+@media only screen and (max-width: 992px) {
+  .form_input__text {
+    height: 2.2rem;
+  }
+}
+@media only screen and (max-width: 451px), screen and (max-height: 720px) {
   .form_input__text {
     height: 1.8rem;
   }
@@ -160,7 +158,7 @@ textarea {
     height: 5rem;
   }
 }
-@media only screen and (max-width: 451px), screen and (max-height: 700px) {
+@media only screen and (max-width: 451px), screen and (max-height: 720px) {
   .form_input_comment {
     height: 3rem;
   }
@@ -171,7 +169,7 @@ textarea {
   text-align: center;
   height: 3rem;
   width: 100%;
-  margin: 3rem auto;
+  margin: 2.5rem auto;
   font-size: 1.2rem;
   font-weight: 700;
   color: white;
@@ -184,9 +182,9 @@ textarea {
     width: 6rem;
   }
 }
-@media only screen and (max-width: 451px), screen and (max-height: 700px) {
+@media only screen and (max-width: 451px), screen and (max-height: 720px) {
   .form__submit_button {
-    margin: 1rem auto;
+    margin: 0.5rem auto;
     height: 2rem;
     width: 6rem;
   }
