--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6,7 +6,7 @@
   padding: 0;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 body {
